HVAC Backup 2/objects/Service_Resource_Location__c(1).object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Image Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Resource Locations</relationshipLabel>
        <relationshipName>Service_Resource_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Resource Locations</relationshipLabel>
        <relationshipName>Service_Resource_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Resource Locations</relationshipLabel>
        <relationshipName>Service_Resource_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Resource Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRL-{0000}</displayFormat>
        <label>SRL NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Resource Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>